feat: creating artificial key for employees table

--- a/Atividade 02/etl.ipynb
+++ b/Atividade 02/etl.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "4       S1  60872504                     ITAU - PRUDENCIAL"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -384,12 +384,12 @@
     "for file in os.listdir(dir):\n",
     "    full_path = os.path.join(dir, file)\n",
     "    print(f'Processing file: {full_path}')\n",
-    "    list_df_claims.append(pd.read_csv(full_path, sep=';', encoding='utf-8'))\n"
+    "    list_df_claims.append(pd.read_csv(full_path, sep=';', encoding='utf-8'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "1                       693843          NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,6 +958,327 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hashlib import sha1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a94a8fe5ccb19ba61c4c0873d391e987982fbbd3'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sha1(\"test\".encode('utf-8')).hexdigest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artificial_key</th>\n",
+       "      <th>Nome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0612d12173005ce00d9c10800a27985a1e75997e</td>\n",
+       "      <td>BNP PARIBAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cdd80a41f223ad9a4236b42c6c1c465c41908aed</td>\n",
+       "      <td>BTG PACTUAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1f7d72cc0ecb87cb6225c2979f3ccbeaf7cd0c33</td>\n",
+       "      <td>ALFA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>c89e80ee154b6215c5dc790d93590f620e1ec45d</td>\n",
+       "      <td>BMG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dd2b7d97678a3cb8b5a9f5e5bf60907d29293298</td>\n",
+       "      <td>BRADESCO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>232138ec23a9f84ca4604fb3f5e5293f3a85b571</td>\n",
+       "      <td>BANCO DAYCOVAL S.A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>359326cf4de50a99ccf55a8b17f67ab96b820c63</td>\n",
+       "      <td>BANCO FIBRA S.A.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>d73ef92426f2b11dfc4aed4d4bfc41c49ee1087c</td>\n",
+       "      <td>ORIGINAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>bd2bd8216b9cb4aa5a12daa6cfc98eef2ee20e56</td>\n",
+       "      <td>PAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2d02a8f51cd38317c6edaf9962e246af47600f8c</td>\n",
+       "      <td>PINE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>009df97a71e97a8d0d3ef44ddae6c718968b2b0c</td>\n",
+       "      <td>VOTORANTIM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>42151eaf691e06db20f0a70676f6115ad7679454</td>\n",
+       "      <td>BANCO DO BRASIL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>bb953b4df7711bcfb088e1ded4bf13761c4c5aed</td>\n",
+       "      <td>BANCO DO NORDESTE DO BRASIL S.A.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2f619fdb380821d4ff43b3ab9c0b898e3131702b</td>\n",
+       "      <td>BANCO TOKYO-MITSUBISHI BM S.A.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>78d8b8b937435d027cb18df07eff064b35448892</td>\n",
+       "      <td>BANRISUL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>307cc3e3d4901086018a2a686a6ff2669f40ee7d</td>\n",
+       "      <td>CAIXA ECONOMICA FEDERAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>fb91dc3beccbe69ffbccc745ccf8c66447d3aaa9</td>\n",
+       "      <td>CITIBANK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>5dbb7a49ed389ecd03bdddf70e44ee1026e1b48b</td>\n",
+       "      <td>CREDIT SUISSE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>b21c4ab5b9d00b8b3b844369172e2a1c92296c10</td>\n",
+       "      <td>DEUTSCHE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>13b9767f731eb940765c210edf044efc949c5b09</td>\n",
+       "      <td>GOLDMAN SACHS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>d6d989ed83e48a300f2c6d5e66e0ffe9f4e6e11b</td>\n",
+       "      <td>ING</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>63c61f41bb7599ec7690876172c5fbf0b5a30c9c</td>\n",
+       "      <td>ITAU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>261a86d456101baf738de10731a5422cacc2dd0d</td>\n",
+       "      <td>JP MORGAN CHASE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>ad83ef23a768f6e7d3177561c9d2d02124205837</td>\n",
+       "      <td>BOFA MERRILL LYNCH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1d8734ad81a470902eb81d837fe9b008dc337952</td>\n",
+       "      <td>MORGAN STANLEY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>263594ba73ade3fa2b3a121a3334f1a808479148</td>\n",
+       "      <td>SANTANDER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>5f4981bfa44866b280a7f630a3a03a3fb3461345</td>\n",
+       "      <td>SICREDI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>37cd191b7b4e28cf65968fb690d35c44186daddc</td>\n",
+       "      <td>SOCIETE GENERALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>009df97a71e97a8d0d3ef44ddae6c718968b2b0c</td>\n",
+       "      <td>VOTORANTIM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>c07f6f4d0b064ee3a4bdea1c8ae43627d08ecc42</td>\n",
+       "      <td>APE POUPEX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>4136dfdb7c547ec3bc0f1bc07e330b031ce0d197</td>\n",
+       "      <td>CHINA CONSTRUCTION BANK (BRASIL) BANCO MULTIPL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>261a86d456101baf738de10731a5422cacc2dd0d</td>\n",
+       "      <td>JP MORGAN CHASE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>dfa4386abf783f3f422225001adba3febc105a50</td>\n",
+       "      <td>MERCEDES-BENZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>e8bb4099d510fb0723280776a823d9c2deb96bc3</td>\n",
+       "      <td>BANCO SUMITOMO MITSUI BRASIL S.A.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              artificial_key  \\\n",
+       "0   0612d12173005ce00d9c10800a27985a1e75997e   \n",
+       "1   cdd80a41f223ad9a4236b42c6c1c465c41908aed   \n",
+       "2   1f7d72cc0ecb87cb6225c2979f3ccbeaf7cd0c33   \n",
+       "3   c89e80ee154b6215c5dc790d93590f620e1ec45d   \n",
+       "4   dd2b7d97678a3cb8b5a9f5e5bf60907d29293298   \n",
+       "5   232138ec23a9f84ca4604fb3f5e5293f3a85b571   \n",
+       "6   359326cf4de50a99ccf55a8b17f67ab96b820c63   \n",
+       "7   d73ef92426f2b11dfc4aed4d4bfc41c49ee1087c   \n",
+       "8   bd2bd8216b9cb4aa5a12daa6cfc98eef2ee20e56   \n",
+       "9   2d02a8f51cd38317c6edaf9962e246af47600f8c   \n",
+       "10  009df97a71e97a8d0d3ef44ddae6c718968b2b0c   \n",
+       "11  42151eaf691e06db20f0a70676f6115ad7679454   \n",
+       "12  bb953b4df7711bcfb088e1ded4bf13761c4c5aed   \n",
+       "13  2f619fdb380821d4ff43b3ab9c0b898e3131702b   \n",
+       "14  78d8b8b937435d027cb18df07eff064b35448892   \n",
+       "15  307cc3e3d4901086018a2a686a6ff2669f40ee7d   \n",
+       "16  fb91dc3beccbe69ffbccc745ccf8c66447d3aaa9   \n",
+       "17  5dbb7a49ed389ecd03bdddf70e44ee1026e1b48b   \n",
+       "18  b21c4ab5b9d00b8b3b844369172e2a1c92296c10   \n",
+       "19  13b9767f731eb940765c210edf044efc949c5b09   \n",
+       "20  d6d989ed83e48a300f2c6d5e66e0ffe9f4e6e11b   \n",
+       "21  63c61f41bb7599ec7690876172c5fbf0b5a30c9c   \n",
+       "22  261a86d456101baf738de10731a5422cacc2dd0d   \n",
+       "23  ad83ef23a768f6e7d3177561c9d2d02124205837   \n",
+       "24  1d8734ad81a470902eb81d837fe9b008dc337952   \n",
+       "25  263594ba73ade3fa2b3a121a3334f1a808479148   \n",
+       "26  5f4981bfa44866b280a7f630a3a03a3fb3461345   \n",
+       "27  37cd191b7b4e28cf65968fb690d35c44186daddc   \n",
+       "28  009df97a71e97a8d0d3ef44ddae6c718968b2b0c   \n",
+       "29  c07f6f4d0b064ee3a4bdea1c8ae43627d08ecc42   \n",
+       "30  4136dfdb7c547ec3bc0f1bc07e330b031ce0d197   \n",
+       "31  261a86d456101baf738de10731a5422cacc2dd0d   \n",
+       "32  dfa4386abf783f3f422225001adba3febc105a50   \n",
+       "33  e8bb4099d510fb0723280776a823d9c2deb96bc3   \n",
+       "\n",
+       "                                                 Nome  \n",
+       "0                                         BNP PARIBAS  \n",
+       "1                                         BTG PACTUAL  \n",
+       "2                                                ALFA  \n",
+       "3                                                 BMG  \n",
+       "4                                            BRADESCO  \n",
+       "5                                  BANCO DAYCOVAL S.A  \n",
+       "6                                    BANCO FIBRA S.A.  \n",
+       "7                                            ORIGINAL  \n",
+       "8                                                 PAN  \n",
+       "9                                                PINE  \n",
+       "10                                         VOTORANTIM  \n",
+       "11                                    BANCO DO BRASIL  \n",
+       "12                   BANCO DO NORDESTE DO BRASIL S.A.  \n",
+       "13                     BANCO TOKYO-MITSUBISHI BM S.A.  \n",
+       "14                                           BANRISUL  \n",
+       "15                            CAIXA ECONOMICA FEDERAL  \n",
+       "16                                           CITIBANK  \n",
+       "17                                      CREDIT SUISSE  \n",
+       "18                                           DEUTSCHE  \n",
+       "19                                      GOLDMAN SACHS  \n",
+       "20                                                ING  \n",
+       "21                                               ITAU  \n",
+       "22                                    JP MORGAN CHASE  \n",
+       "23                                 BOFA MERRILL LYNCH  \n",
+       "24                                     MORGAN STANLEY  \n",
+       "25                                          SANTANDER  \n",
+       "26                                            SICREDI  \n",
+       "27                                   SOCIETE GENERALE  \n",
+       "28                                         VOTORANTIM  \n",
+       "29                                         APE POUPEX  \n",
+       "30  CHINA CONSTRUCTION BANK (BRASIL) BANCO MULTIPL...  \n",
+       "31                                    JP MORGAN CHASE  \n",
+       "32                                      MERCEDES-BENZ  \n",
+       "33                  BANCO SUMITOMO MITSUI BRASIL S.A.  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employees['artificial_key'] = employees['Nome'].str.lower()\n",
+    "employees['artificial_key'] = employees['artificial_key'].str.replace(\" \", \"\")\n",
+    "employees['artificial_key'] = employees['artificial_key'].map(lambda x: sha1(x.encode('utf-8')).hexdigest())\n",
+    "\n",
+    "employees.loc[:, ['artificial_key', 'Nome'] ]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1352,7 +1673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
