feat: adding TODOs

--- a/Atividade 02/etl.ipynb
+++ b/Atividade 02/etl.ipynb
@@ -44,7 +44,10 @@
     "            - remover coluna unnamed\n",
     "- delivery\n",
     "    - tabela consolidada\n",
-    "    - agregação"
+    "    - agregação\n",
+    "\n",
+    "- Adicionar zeros à esquerda para os CNPJs, exemplo, CNPJ do banco do é 00000000... mas no arquivo orignal está como apenas \"0\"\n",
+    "- Considerar o CPPJ com o segmento para realizar o join"
    ]
   },
   {
@@ -1652,7 +1655,7 @@
     }
    ],
    "source": [
-    "%%writefile ./scripts/testes.pyg\n",
+    "%%writefile ./scripts/testes.py\n",
     "print('hello world')"
    ]
   }
