--- a/Atividade 02/etl.ipynb
+++ b/Atividade 02/etl.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Atividade 02: Ingestão e ETL com linguagem de programação (Python)\n",
+    "# eEDB-011-2024-3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Atividade 02: Ingestão e ETL com linguagem de programação (Python)\n",
     "\n",
     "- Utilizar linguagem de programação Python para ingestão e tratamento de dados.\n",
     "    - Pacotes adicionais podem ser utilizados (exceto Spark)\n",
@@ -18,8 +25,13 @@
     "- Adicionar as seguintes camadas de processamento, dentro do próprio banco de dados ou em disco local. A Camada Delivery deve obrigatoriamente ter estar também no formato de uma tabela final dentro do banco de dados relacional:\n",
     "    - RAW – formato dos dados livre\n",
     "    - Trusted – formato de dados em Parquet ou ORC or AVRO (indicado Parquet)\n",
-    "    - Delivery– formato de dados em Parquet ou ORC or AVRO (indicado Parquet)\n",
-    "\n",
+    "    - Delivery– formato de dados em Parquet ou ORC or AVRO (indicado Parquet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- **Grupo 02**:\n",
     "    - Aline Bini\n",
     "    - Ana Lívia Franco\n",
@@ -27,6 +39,8 @@
     "    - João Squinelato\n",
     "    - Marcelo Pena\n",
     "    - Thais Siqueira\n",
+    "\n",
+    "- [Github](https://github.com/Squinelato/eEDB-011-2024-3 \"eEDB-011-2024-3\")\n",
     "\n",
     "```Ingestão De Dados | Agosto 2024```"
    ]
