--- a/Atividade 02/etl.ipynb
+++ b/Atividade 02/etl.ipynb
@@ -70,7 +70,7 @@
     "    - agregação\n",
     "\n",
     "- Adicionar zeros à esquerda para os CNPJs, exemplo, CNPJ do banco do é 00000000... mas no arquivo orignal está como apenas \"0\" (ok)\n",
-    "- Considerar o CPPJ com o segmento para realizar o join"
+    "- Considerar o CPPJ com o segmento para realizar o join (ok)"
    ]
   },
   {
@@ -83,10 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from unidecode import unidecode\n",
     "from hashlib import sha1\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -98,14 +99,14 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Raw"
+    "## **Raw**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Banks file"
+    "### **Banks file**"
    ]
   },
   {
@@ -233,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Employees file"
+    "### **Employees file**"
    ]
   },
   {
@@ -441,7 +442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Claims file"
+    "### **Claims**"
    ]
   },
   {
@@ -659,14 +660,14 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Trusted"
+    "## **Trusted**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Banks"
+    "### **Banks**"
    ]
   },
   {
@@ -840,6 +841,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cnpj\n",
+       "00000208    2\n",
+       "07450604    2\n",
+       "00000000    2\n",
+       "17184037    2\n",
+       "59285411    2\n",
+       "           ..\n",
+       "00068389    1\n",
+       "04138455    1\n",
+       "03428338    1\n",
+       "04179861    1\n",
+       "04146333    1\n",
+       "Name: count, Length: 1459, dtype: int64"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trzd_bank['cnpj'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -859,12 +892,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Employees"
+    "### **Employees**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,12 +1008,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4 - Criando chave artificial com base no nome da instituição financeira"
+    "4 - Removendo acentos do campos _financial_institution_name_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trzd_employee['financial_institution_name'] = trzd_employee['financial_institution_name'].map(lambda x: unidecode(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5 - Criando chave artificial com base no nome da instituição financeira"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1273,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,12 +1302,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Claims"
+    "### **Claims**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,13 +1385,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
     "trzd_claim[\"index\"] = trzd_claim[\"index\"].str.replace('.', '')\n",
     "trzd_claim[\"index\"] = trzd_claim[\"index\"].str.replace(',', '.')\n",
-    "trzd_claim['index'] = trzd_claim['index'].replace(' ', np.nan)"
+    "trzd_claim[\"index\"] = trzd_claim[\"index\"].replace(' ', np.nan)"
    ]
   },
   {
@@ -1357,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,8 +1468,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7 - Padronizando o campo _financial_institution_name_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Padrão encontrado \" (conglomerado)\", que não estava de acordo com o campo _financial_institution_name_ em _employees_"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trzd_claim['financial_institution_name'] = trzd_claim['financial_institution_name'].str.replace(' (conglomerado)', '')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remoção de acentos para aumentar a probabilidade de match com os bancos de _ employees_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trzd_claim['financial_institution_name'] = trzd_claim['financial_institution_name'].map(lambda x: unidecode(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Casos pontuais encontrados nos nomes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trzd_claim['financial_institution_name'] = trzd_claim['financial_institution_name'].str.replace('BB', 'BANCO DO BRASIL')\n",
+    "trzd_claim['financial_institution_name'] = trzd_claim['financial_institution_name'].str.replace('DAYCOVAL', 'BANCO DAYCOVAL S.A')\n",
+    "trzd_claim['financial_institution_name'] = trzd_claim['financial_institution_name'].str.replace('DEUTSCHE BANK S.A. - BANCO ALEMAO', 'DEUTSCHE')\n",
+    "trzd_claim['financial_institution_name'] = trzd_claim['financial_institution_name'].str.replace('BANCO SUMITOMO MITSUI BRASILEIRO S.A.', 'BANCO SUMITOMO MITSUI BRASIL S.A.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8 - Criando duas chaves artificiais: uma com base no nome da instituição financeira e outra com base no CNPJ e o Segmento da instituição financeira"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trzd_claim['bank_name_id'] = trzd_claim['financial_institution_name'].str.lower()\n",
+    "trzd_claim['bank_name_id'] = trzd_claim['bank_name_id'].str.replace(\" \", \"\")\n",
+    "trzd_claim['bank_name_id'] = trzd_claim['bank_name_id'].map(lambda x: sha1(x.encode('utf-8')).hexdigest())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -1458,6 +1583,7 @@
        "      <th>total_number_of_ccs_and_scr_customers</th>\n",
        "      <th>number_of_ccs_customers</th>\n",
        "      <th>number_of_scr_customers</th>\n",
+       "      <th>bank_name_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1468,7 +1594,7 @@
        "      <td>Grupo Secundário</td>\n",
        "      <td>Conglomerado</td>\n",
        "      <td>0000000</td>\n",
-       "      <td>ABC-BRASIL (conglomerado)</td>\n",
+       "      <td>ABC-BRASIL</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
@@ -1477,6 +1603,7 @@
        "      <td>26230</td>\n",
        "      <td>24698</td>\n",
        "      <td>3810</td>\n",
+       "      <td>e59e75522e2fc29a497ee94dfac733ebe7557b68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1485,7 +1612,7 @@
        "      <td>Grupo Secundário</td>\n",
        "      <td>Conglomerado</td>\n",
        "      <td>0000000</td>\n",
-       "      <td>AGIBANK (conglomerado)</td>\n",
+       "      <td>AGIBANK</td>\n",
        "      <td>54.79</td>\n",
        "      <td>58</td>\n",
        "      <td>140</td>\n",
@@ -1494,6 +1621,7 @@
        "      <td>1058431</td>\n",
        "      <td>790848</td>\n",
        "      <td>693843</td>\n",
+       "      <td>9935e071203e03fbcf8bebc6bf6eed7f348e3a7a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1502,7 +1630,7 @@
        "      <td>Grupo Secundário</td>\n",
        "      <td>Banco/financeira</td>\n",
        "      <td>36321990</td>\n",
-       "      <td>AGORACRED S/A SOCIEDADE DE CRÉDITO, FINANCIAME...</td>\n",
+       "      <td>AGORACRED S/A SOCIEDADE DE CREDITO, FINANCIAME...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
@@ -1511,6 +1639,7 @@
        "      <td>420692</td>\n",
        "      <td>129</td>\n",
        "      <td>420563</td>\n",
+       "      <td>d14cba42359f43b5fbd61ee3d0faefaa73997b85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1519,7 +1648,7 @@
        "      <td>Grupo Secundário</td>\n",
        "      <td>Banco/financeira</td>\n",
        "      <td>27214112</td>\n",
-       "      <td>AL5 S.A. CRÉDITO, FINANCIAMENTO E INVESTIMENTO</td>\n",
+       "      <td>AL5 S.A. CREDITO, FINANCIAMENTO E INVESTIMENTO</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1528,6 +1657,7 @@
        "      <td>12645</td>\n",
        "      <td>4979</td>\n",
        "      <td>10112</td>\n",
+       "      <td>c01ccc940cb107c1e48d2eef610c91c7d0354b2e</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1536,7 +1666,7 @@
        "      <td>Grupo Secundário</td>\n",
        "      <td>Conglomerado</td>\n",
        "      <td>0000000</td>\n",
-       "      <td>ALFA (conglomerado)</td>\n",
+       "      <td>ALFA</td>\n",
        "      <td>NaN</td>\n",
        "      <td>14</td>\n",
        "      <td>44</td>\n",
@@ -1545,6 +1675,7 @@
        "      <td>412135</td>\n",
        "      <td>268186</td>\n",
        "      <td>145105</td>\n",
+       "      <td>1f7d72cc0ecb87cb6225c2979f3ccbeaf7cd0c33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1559,11 +1690,11 @@
        "4  2021        1  Grupo Secundário      Conglomerado  0000000    \n",
        "\n",
        "                          financial_institution_name  index  \\\n",
-       "0                          ABC-BRASIL (conglomerado)    NaN   \n",
-       "1                             AGIBANK (conglomerado)  54.79   \n",
-       "2  AGORACRED S/A SOCIEDADE DE CRÉDITO, FINANCIAME...    NaN   \n",
-       "3     AL5 S.A. CRÉDITO, FINANCIAMENTO E INVESTIMENTO    NaN   \n",
-       "4                                ALFA (conglomerado)    NaN   \n",
+       "0                                         ABC-BRASIL    NaN   \n",
+       "1                                            AGIBANK  54.79   \n",
+       "2  AGORACRED S/A SOCIEDADE DE CREDITO, FINANCIAME...    NaN   \n",
+       "3     AL5 S.A. CREDITO, FINANCIAMENTO E INVESTIMENTO    NaN   \n",
+       "4                                               ALFA    NaN   \n",
        "\n",
        "   number_of_regulated_proceeding_complaints  \\\n",
        "0                                          2   \n",
@@ -1586,15 +1717,22 @@
        "3                           2                                  12645   \n",
        "4                          73                                 412135   \n",
        "\n",
-       "   number_of_ccs_customers  number_of_scr_customers  \n",
-       "0                    24698                     3810  \n",
-       "1                   790848                   693843  \n",
-       "2                      129                   420563  \n",
-       "3                     4979                    10112  \n",
-       "4                   268186                   145105  "
+       "   number_of_ccs_customers  number_of_scr_customers  \\\n",
+       "0                    24698                     3810   \n",
+       "1                   790848                   693843   \n",
+       "2                      129                   420563   \n",
+       "3                     4979                    10112   \n",
+       "4                   268186                   145105   \n",
+       "\n",
+       "                               bank_name_id  \n",
+       "0  e59e75522e2fc29a497ee94dfac733ebe7557b68  \n",
+       "1  9935e071203e03fbcf8bebc6bf6eed7f348e3a7a  \n",
+       "2  d14cba42359f43b5fbd61ee3d0faefaa73997b85  \n",
+       "3  c01ccc940cb107c1e48d2eef610c91c7d0354b2e  \n",
+       "4  1f7d72cc0ecb87cb6225c2979f3ccbeaf7cd0c33  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,12 +1769,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- join das três: bank_consolidated\n",
-    "- join (merge pandas) banks + claims pelo bank_document_id\n",
-    "- merge desss resultante pela chave bank_name_id (hash nome) - pegar name bank id para fazer o join\n",
     "- selecionar o que queremos para não repetir colunas (no próprio merge decide)\n",
     "- salvar em parquet + to_sql (colocar apenas a tabela consolidada no banco)\n",
     "- sugestão: instalar postgree para criar o banco"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trzd_bank_path = './trusted/bank'\n",
+    "banks = pd.read_parquet(trzd_bank_path, engine='pyarrow')\n",
+    "\n",
+    "trzd_employee_path = './trusted/employee'\n",
+    "employee = pd.read_parquet(trzd_employee_path, engine='pyarrow')\n",
+    "\n",
+    "trzd_claim_path = './trusted/claim'\n",
+    "claims = pd.read_parquet(trzd_claim_path, engine='pyarrow')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# JOIN banks + claim por cnpj (gerar bank_name_id)\n",
+    "\n",
+    "banks_claims = pd.merge(banks, claims, on='cnpj', how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# JOIN claim + employee por bank_name_id (gerar bank_document_id)\n",
+    "\n",
+    "employee_claims = pd.merge(employee, claims, on='bank_name_id', how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# JOIN das duas tabelas acima por bank_document_id\n"
    ]
   },
   {
