--- a/Atividade 03/spark_etl.ipynb
+++ b/Atividade 03/spark_etl.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.functions import udf, lpad, col, lpad\n",
     "from pyspark.sql.types import StringType, FloatType, IntegerType\n",
     "\n",
     "import os"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "1474"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,12 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_bank_path = './raw/bank/'\n",
-    "rwzd_bank.write.parquet(raw_bank_path, mode=\"append\")"
+    "# raw_bank_path = './raw/bank/'\n",
+    "# rwzd_bank.write.parquet(raw_bank_path, mode=\"append\")"
    ]
   },
   {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        " '../Fonte de Dados/Empregados/glassdoor_consolidado_join_match_v2.csv']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "37"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,12 +478,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_employee_path = './raw/employee/'\n",
-    "rwzd_employee.write.parquet(raw_employee_path, mode=\"append\")"
+    "# raw_employee_path = './raw/employee/'\n",
+    "# rwzd_employee.write.parquet(raw_employee_path, mode=\"append\")"
    ]
   },
   {
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        " '../Fonte de Dados/Reclamações/2022_tri_04.csv']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "918"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,12 +665,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_claim_path = './raw/claim/'\n",
-    "rwzd_claim.write.parquet(raw_claim_path, mode=\"append\")"
+    "# raw_claim_path = './raw/claim/'\n",
+    "# rwzd_claim.write.parquet(raw_claim_path, mode=\"append\")"
    ]
   },
   {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,12 +733,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trzd_bank = trzd_bank.withColumn('cnpj', lpad(col('cnpj'), 8, '0'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+--------+--------------------------+\n",
+      "|segment|    cnpj|financial_institution_name|\n",
+      "+-------+--------+--------------------------+\n",
+      "|     S1|00000000|      BANCO DO BRASIL -...|\n",
+      "|     S1|60746948|      BRADESCO - PRUDEN...|\n",
+      "|     S1|30306294|      BTG PACTUAL - PRU...|\n",
+      "|     S1|00360305|      CAIXA ECONOMICA F...|\n",
+      "|     S1|60872504|         ITAU - PRUDENCIAL|\n",
+      "|     S1|90400888|      SANTANDER - PRUDE...|\n",
+      "|     S2|92702067|      BANRISUL - PRUDEN...|\n",
+      "|     S2|07237373|      BANCO DO NORDESTE...|\n",
+      "|     S2|33657248|        BNDES - PRUDENCIAL|\n",
+      "|     S2|33479023|      CITIBANK - PRUDEN...|\n",
+      "|     S2|33987793|      CREDIT SUISSE - P...|\n",
+      "|     S2|58160789|        SAFRA - PRUDENCIAL|\n",
+      "|     S2|59588111|      VOTORANTIM - PRUD...|\n",
+      "|     S3|28195667|      ABC-BRASIL - PRUD...|\n",
+      "|     S3|60770336|         ALFA - PRUDENCIAL|\n",
+      "|     S3|00655522|                APE POUPEX|\n",
+      "|     S3|02992446|      BANCO CNH INDUSTR...|\n",
+      "|     S3|02038232|      BANCOOB - PRUDENCIAL|\n",
+      "|     S3|28127603|      BANESTES - PRUDEN...|\n",
+      "|     S3|31597552|      BANCO CLASSICO S....|\n",
+      "+-------+--------+--------------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "trzd_bank.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def zero_fill_string(string_value: str) -> str:\n",
-    "    return "
+    "def zero_fill_string(cnpj: str) -> str:\n",
+    "    return cnpj.zfill(8) if len(cnpj) < 0 else cnpj"
    ]
   },
   {
